hphp/hack/test/typecheck/sealed/warning_sealed/interface_class.php
<?hh

<<__Sealed(B::class)>>
interface A {}

class B {}

class C implements A {}
